--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 
     <link rel="stylesheet" type="text/css" href="index.css">
 
+    <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+
+    <script src="indexreact.js"></script>
     <script src="index.js"></script>
   </head>
 
@@ -20,31 +24,8 @@
           <th>dupes</th>
         </tr>
       </thead>
-      <tbody>
-        <tr>
-          <td>Group: mono x chro » nhentai: hentai doujinshi and manga</td>
-          <td>mono x chro</td>
-          <td><a href="google.com">link</a></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td>Group: mono x chro » nhentai: hentai doujinshi and manga</td>
-          <td>mono x chro</td>
-          <td><a href="google.com">link</a></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td>Group: mono x chro » nhentai: hentai doujinshi and manga</td>
-          <td>mono x chro</td>
-          <td><a href="google.com">link</a></td>
-          <td></td>
-        </tr>
-        <tr class="in-database">
-          <td>Group: mono x chro » nhentai: hentai doujinshi and manga</td>
-          <td>mono x chro</td>
-          <td><a href="google.com" target="_blank">link</a></td>
-          <td></td>
-        </tr>
+      <tbody class="bookmark-compare-body">
+
       </tbody>
     </table>
 
