render other thing

--- a/index.html
+++ b/index.html
@@ -32,17 +32,13 @@
     <h2>in database but not in bookmarks</h2>
     <table>
       <thead>
-        <th>database name</th>
+        <th class="bookmark-name-header">database name</th>
         <th>link</th>
         <th>dupes</th>
         <th></th>
       </thead>
-      <tbody>
-        <tr>
-          <td>mono x chro</td>
-          <td><a href="google.com">link</a></td>
-          <td></td>
-        </tr>
+      <tbody class="not-in-bookmarks-body">
+
       </tbody>
     </table>
   </body>
